<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectMode</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="system_update">系统升级</string>
    <string name="tbox_update">TBOX升级</string>
    <string name="mx_update">惯导升级</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    
    <string name="version_no">版本号</string>
    
    <string name="version_info">版本信息</string>
    <string name="update">升级</string>
    <string name="debug_mode">调试模式</string>
    <string name="system_profile">系统参数</string>
    
    <string name="product_model">版本型号：%s</string>
    <string name="android_version">Android版本：%s</string>
    <string name="mcu_version">MCU版本：%s</string>
    <string name="arm_version">ARM版本：%s</string>
    <string name="map_version">地图版本：%s</string>
    <string name="bluetooth_version">蓝牙版本：%s</string>
    <string name="sound_version">语音版本：%s</string>
    
    <string name="adb_debug">ADB调试</string>
    <string name="system_logs">系统日志</string>
    <string name="tbox_logs">TBOX日志</string>
    <string name="gps_logs">GPS日志</string>
    
    <string name="cpu_temperature">CPU温度：%s</string>
    <string name="ram">运行内存：%s</string>
    <string name="rom">存储容量：%s</string>
    <string name="bluetooth_address">蓝牙地址：%s</string>
    <string name="wlan_address">WLAN地址：%s</string>
    <string name="device_series">设备序列号：%s</string>
    <string name="net_signal">网络信号：%s</string>
    <string name="tbox_iccid">TBOX ICCID：%s</string>
    
    <string name="upgrade">升级</string>
    <string name="check_for_upgrade">正在检查</string>
    <string name="error_package_verify_failed">升级包校验失败，请确保升级包正确！</string>
    <string name="error_package_install_failed">升级包安装失败</string>
    <string name="download_upgrade_package">正在拷贝升级包</string>
    <string name="copy_upgrade_package">正在拷贝升级包</string>
    <string name="error_server_no_package">服务器未发现升级包</string>
    <string name="error_write_file">写入文件失败</string>
    <string name="error_image_file">Error: 错误的升级包</string>
    <string name="error_file_not_exists">Error: 文件不存在</string>
    <string name="verify_package">正在校验升级包</string>
    <string name="have_new">发现升级包</string>
    <string name="length_unknown">Unknown</string>
    <string name="size">Size </string>
    <string name="version">Version</string>
    <string name="full_version">Description</string>
    <string name="error_needs_wifi">Error: 需要连接wifi</string>
    <string name="error_cannot_connect_server">Error: 无法连接到服务器</string>
    <string name="already_up_to_date">\n已经是最新的版本</string>

    <string name="system_upgrade_title">"System update"</string>
    <string name="cpu_info_title">"Processor"</string>
    <string name="cpu_info">"i.MX6&#8211;4 ARM Cortex&#8211;A9 CPU"</string>
    <string name="software_coding">"Software coding"</string>
    <string name="software_version">"Software version"</string>
    <string name="hardware_version">"CANBUS version"</string> 
    <string name="select_file">"选择一个升级包"</string>
    <string name="notfound">"没有发现可使用的升级包."</string> 
    <string name="quit">"退出"</string> 
    
    <string name="on">开</string>
    <string name="off">关</string>
    
    <string name="save">保存</string>
    <string name="saving">正在保存</string>
    <string name="copying">正在复制文件…</string>
    
    <string name="error_mmc_size_not_match">Error: MMC 大小不匹配！</string>
    
    <string name="choose">选择</string>
    <string name="no_img_files">没有找到系统升级文件</string>
    <string name="no_tbox_files">没有找到TBOX升级文件</string>
    <string name="tbox_dev_not_connected">TBOX设备未连接！</string>
    <string name="ftp_dir_create_failed">ftp目录创建失败！</string>
    
    
    
    
</resources>
