<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout style="@style/debug_mode_layout_item" >

        <TextView
            android:id="@+id/tv_adb_debug"
            style="@style/debug_mode_tv_item"
            android:text="@string/adb_debug" />

         <com.hwatong.projectmode.ui.SwitchButton
                android:id="@+id/switch_adb_debug"
                style="@style/SwitchButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="56dp"
                app:kswBackDrawable="@drawable/track"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                android:textSize="22px"
                app:kswThumbDrawable="@drawable/setting_switch_thumb" />

    </LinearLayout>

    <View
        android:layout_width="807px"
        android:layout_height="1px"
        android:background="@drawable/line" />

    <LinearLayout style="@style/debug_mode_layout_item" >

        <TextView
            android:id="@+id/tv_system_logs"
            style="@style/debug_mode_tv_item"
            android:text="@string/system_logs" />

        <com.hwatong.projectmode.ui.SwitchButton
                android:id="@+id/switch_system_logs"
                style="@style/SwitchButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="56dp"
                app:kswBackDrawable="@drawable/track"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                android:textSize="22px"
                app:kswThumbDrawable="@drawable/setting_switch_thumb" />
    </LinearLayout>

    <View
        android:layout_width="807px"
        android:layout_height="1px"
        android:background="@drawable/line" />

    <LinearLayout style="@style/debug_mode_layout_item" >

        <TextView
            android:id="@+id/tv_tbox_logs"
            style="@style/debug_mode_tv_item"
            android:text="@string/tbox_logs" />

        <Button
                android:id="@+id/switch_tbox_logs"
                style="@style/SwitchButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="56dp"
                android:layout_marginLeft="25dp"
                android:textSize="22px"
                android:background="@drawable/button_selector"
                android:text="@string/save" />
    </LinearLayout>

    <View
        android:layout_width="807px"
        android:layout_height="1px"
        android:background="@drawable/line" />

    <LinearLayout style="@style/debug_mode_layout_item" >

        <TextView
            android:id="@+id/tv_gps_logs"
            style="@style/debug_mode_tv_item"
            android:text="@string/gps_logs" />

        <com.hwatong.projectmode.ui.SwitchButton
                android:id="@+id/switch_gps_logs"
                style="@style/SwitchButtonStyle"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="56dp"
                app:kswBackDrawable="@drawable/track"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                android:textSize="22px"
                app:kswThumbDrawable="@drawable/setting_switch_thumb" />
    </LinearLayout>

    <View
        android:layout_width="807px"
        android:layout_height="1px"
        android:background="@drawable/line" />

</LinearLayout>