<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/confirm_title"
	    android:orientation="vertical"
	    >
	    <TextView 
	        android:id="@+id/tv_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/update"
	        android:textColor="@color/white"
	        android:textSize="22sp"
	        android:layout_marginTop="20dp"
	        android:layout_gravity="center_horizontal"
	        />
	    <TextView
	        android:id="@+id/tv_message_1"
	        android:layout_width="330dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="46dp"
	        android:singleLine="true"
	        android:textColor="@color/white"
	        android:textSize="14sp"
	        />
	    <TextView
	        android:id="@+id/tv_message_2"
	        android:layout_width="330dp"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:layout_marginLeft="46dp"
	        android:textColor="@color/white"
	        android:textSize="14sp"
	        />
	    <TextView
	        android:id="@+id/tv_message_3"
	        android:layout_width="330dp"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:layout_marginLeft="46dp"
	        android:textColor="@color/white"
	        android:textSize="14sp"
	        />
	</LinearLayout>
    
	<LinearLayout 
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"	    
		android:orientation="horizontal"
	    >
	    <Button 
	        android:id="@+id/bt_confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:background="@drawable/confirm_left_selector"	        
			android:text="@string/confirm"
			android:textColor="@color/confirm_btn_color_selector"
			android:textSize="21sp"
	        />
	    <Button 
	        android:id="@+id/bt_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:background="@drawable/confirm_right_selector"	        
			android:text="@string/cancel"
			android:textColor="@color/confirm_btn_color_selector"
			android:textSize="21sp"
	        />
	</LinearLayout>
</LinearLayout>
